--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 
 data/
 !data/.gitkeep
+!data/documentation/.gitkeep
+!data/html_reports/.gitkeep
+!data/source/.gitkeep
+!data/handmade/.gitkeep
+!data/processed/.gitkeep
+!data/public/.gitkeep
 
 scratch/
 !scratch/.gitkeep
