--- a/{{cookiecutter.project_slug}}/.gitignore
+++ b/{{cookiecutter.project_slug}}/.gitignore
@@ -1,14 +1,5 @@
 *.vim
 .DS_Store
 
-data/
-!data/.gitkeep
-!data/documentation/.gitkeep
-!data/html_reports/.gitkeep
-!data/source/.gitkeep
-!data/handmade/.gitkeep
-!data/processed/.gitkeep
-!data/public/.gitkeep
-
-scratch/
+scratch/*
 !scratch/.gitkeep
